--- a/styles/style.css
+++ b/styles/style.css
@@ -171,6 +171,7 @@
 /* Faynman block  */
 .feynman {
   min-height: 890px;
+  padding-top: 100px;
   background-color: #f2f2f2;
   position: relative;
 }
