--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,9 @@
-h1, h2, h3, h4, p, div, img {
-  margin: 0;
-} 
 .page {
   min-width: 1100px;
   max-width: 1600px;
   margin: 0 auto;
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
-
-/* Header block  */
 .header {
   display: flex;
   align-items: center;
@@ -30,6 +25,7 @@ h1, h2, h3, h4, p, div, img {
   z-index: 2;
 }
 .header__title {
+  margin: 0;
   align-items: stretch;
   flex-direction: row;
   position: relative;
@@ -39,8 +35,10 @@ h1, h2, h3, h4, p, div, img {
   font-size: 102px;
   font-weight: 600;
   z-index: 2;
+  
 }
 .header__subtitle {
+  margin: 0;
   position: absolute;
   min-height: 25px;
   width: 388px;
@@ -50,6 +48,7 @@ h1, h2, h3, h4, p, div, img {
   left: 64px;
   bottom: 30px;
   z-index: 2;
+  
 }
 .header__link {
   text-decoration: none;
@@ -73,7 +72,6 @@ h1, h2, h3, h4, p, div, img {
   z-index: 0;
   overflow: auto;
 }
-/* Description block  */
 .description {
   margin-top: 100px;
 }
@@ -88,6 +86,7 @@ h1, h2, h3, h4, p, div, img {
   margin-left: auto;
 }
 .two-columns__brief {
+  margin: 0;
   flex-basis: 175px;
   line-height: 1.2;
   font-size: 18px;
@@ -100,13 +99,11 @@ h1, h2, h3, h4, p, div, img {
   justify-content: space-between;
   flex-basis: 80%;
   min-width: 784px;
-  
 }
 .two-columns__paragraph {
   line-height: 34px;
   font-size: 24px;
   font-weight: 400;
-  
 }
 .two-columns__paragraph:not(:last-child) {
   margin: 0 0 30px 0;
@@ -116,14 +113,13 @@ h1, h2, h3, h4, p, div, img {
   line-height: 34px;
   font-weight: 600;
 }
-
-/* Digits block  */
 .digits {
   margin-top: 100px;
   margin-bottom: 100px;
   position: relative;
 }
 .section-title {
+  margin: 0;
   width: 60%;
   line-height: 1.15;
   font-size: 60px;
@@ -134,6 +130,7 @@ h1, h2, h3, h4, p, div, img {
   margin-right: auto;
 }
 .section-subtitle {
+  margin: 0;
   width: 60%;
   line-height: 34px;
   font-size: 24px;
@@ -157,13 +154,14 @@ h1, h2, h3, h4, p, div, img {
   margin-top: 60px;
 }
 .table__heading {
+  margin: 0;
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
   z-index: 1;
-  margin-bottom: 20px;
 }
 .table__text {
+  margin: 0;
   line-height: 1.2;
   font-size: 18px;
   font-weight: 400;
@@ -173,7 +171,6 @@ h1, h2, h3, h4, p, div, img {
 .table__text:not(:first-child) {
   margin: 20px 0 0 0;
 }
-/* Faynman block  */
 .feynman {
   min-height: 890px;
   padding-top: 100px;
@@ -187,6 +184,7 @@ h1, h2, h3, h4, p, div, img {
   font-size: 102px;
   font-weight: 600;
   width: 648px;
+  margin: 0;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 70px;
@@ -222,8 +220,6 @@ h1, h2, h3, h4, p, div, img {
   z-index: 1;
   color: #2f80ed;
 }
-
-/* Kaufman block  */
 .kaufman {
   overflow: hidden;
   padding-top: 90px;
@@ -232,7 +228,6 @@ h1, h2, h3, h4, p, div, img {
   background-color: #1f1f1f;
   color: white;
   z-index: 2;
-    
 }
 .kaufman__triangle {
   background-image: url(../images/kaufman-triangle.svg);
@@ -245,13 +240,11 @@ h1, h2, h3, h4, p, div, img {
   right: -210px;
   z-index: -1;
 }
-.table_theme_dark {
+.table_cell_theme_dark {
   width: 200px;
   margin-top: 80px;
   z-index: 1;
 }
-
-/* Footer block  */
 .footer {
   min-height: 350px;
   display: flex;
