09/01/2023 десктопные разрешения, убрал дубли, корректировки по брифу

--- a/blocks/resources/__logo/resources__logo.css
+++ b/blocks/resources/__logo/resources__logo.css
@@ -2,6 +2,7 @@
     margin: 0;
     width: 270px;
     height: 38px;
+    object-fit: contain;
     transition: opacity 1.0s linear 0s;
 }
 .resources__logo:hover {
