--- a/blocks/feynman/__link/feynman__link.css
+++ b/blocks/feynman/__link/feynman__link.css
@@ -4,6 +4,7 @@
     align-items: center;
     line-height: 51px;
     font-size: 36px;
+    font-weight: 400;
     top:50%;
     right: 48px;
     text-decoration: none;
