--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,5 +2,6 @@
     min-width: 1100px;
     max-width: 1600px;
     margin: 0 auto;
+    overflow-x: hidden;
     font-family: 'Helvetica Neue', Arial, sans-serif;
   }
