--- a/blocks/header/__main-illustration/header__main-illustration.css
+++ b/blocks/header/__main-illustration/header__main-illustration.css
@@ -1,5 +1,7 @@
 .header__main-illustration {
     position: absolute;
+    object-fit: cover;
+    object-position: 50% 50%;
     height: 608px;
     width: 765px;
     z-index: 1;
