--- a/blocks/header/__subtitle/header__subtitle.css
+++ b/blocks/header/__subtitle/header__subtitle.css
@@ -1,8 +1,8 @@
 .header__subtitle {
     margin: 0;
     position: absolute;
-    min-height: 25px;
     width: 388px;
+    line-height: 25px;
     font-weight: 400;
     font-size: 18px;
     left: 64px;
