--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -1,11 +1,10 @@
 .header__title {
-    margin: 0;
-    align-items: stretch;
-    flex-direction: row;
-    position: relative;
-    margin-left: 64px;
+    margin: 0 0 0 64px;
     max-width: 730px;
-    min-height: 96px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    line-height: 96px;
     font-size: 102px;
     font-weight: 600;
     z-index: 2;
