--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -2,9 +2,8 @@
     width: 1100px;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-between;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
+    justify-content: space-around;
+    margin: 0 auto 0;
+    padding: 0 0 0;
+    list-style: none;
   }
