--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -1,14 +1,10 @@
 .video__iframes {
     list-style: none;
-    margin: 50px auto -30px;
+    margin: 50px auto 0;
     padding: 0 0 0;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    opacity: 0.5;
     position: relative;
     z-index: 10;
-}
-.video__iframes:hover {
-    opacity: 1;
 }
